--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,8 @@ Flask==3.1.2
 frozenlist==1.7.0
 gitdb==4.0.12
 GitPython==3.1.45
-google-generativeai==0.8.5
+google-generativeai>=0.8.5
+google-ai-generativelanguage>=0.6.15
 google-api-core==2.25.1
 google-api-python-client==2.181.0
 google-auth==2.40.3
@@ -102,4 +103,5 @@ watchdog==6.0.0
 Werkzeug==3.1.3
 yarl==1.20.1
 zstandard==0.24.0
+
 
