--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiohappyeyeballs==2.6.1
+aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
 altair==5.5.0
@@ -20,13 +20,11 @@ Flask==3.1.2
 frozenlist==1.7.0
 gitdb==4.0.12
 GitPython==3.1.45
-google-generativeai>=0.8.5
-google-ai-generativelanguage>=0.6.15
+google-generativeai==0.8.5
 google-api-core==2.25.1
 google-api-python-client==2.181.0
 google-auth==2.40.3
 google-auth-httplib2==0.2.0
-google-generativeai==0.8.5
 googleapis-common-protos==1.70.0
 greenlet==3.2.4
 grpcio==1.74.0
@@ -103,5 +101,3 @@ watchdog==6.0.0
 Werkzeug==3.1.3
 yarl==1.20.1
 zstandard==0.24.0
-
-
